[gd_scene load_steps=13 format=2]

[ext_resource path="res://entity/inventory/support_item/air_strike/air_strike.obj" type="ArrayMesh" id=1]
[ext_resource path="res://entity/inventory/support_item/air_strike/air_strike.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/icons/circle.png" type="Texture" id=3]

[sub_resource type="SpatialMaterial" id=15]
resource_name = "Material.004"
albedo_color = Color( 1, 0, 0, 1 )
metallic = 0.5

[sub_resource type="SpatialMaterial" id=8]
resource_name = "Material.005"
albedo_color = Color( 0.025394, 0.025394, 0.025394, 1 )
metallic = 0.5

[sub_resource type="SpatialMaterial" id=14]
resource_name = "Material.005"
albedo_color = Color( 0.560784, 0.560784, 0.560784, 1 )
metallic = 0.5

[sub_resource type="SpatialMaterial" id=22]
albedo_color = Color( 0.203922, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=16]
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:material/4:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:material/4")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ SubResource( 16 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MeshInstance:material/3")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ SubResource( 22 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MeshInstance:material/3:albedo_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.203922, 1, 0, 1 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "bip"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:material/4:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:material/3:albedo_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "incoming"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:material/4:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 1, 0.0980392, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:material/3:albedo_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.203922, 1, 0, 1 ) ]
}

[sub_resource type="CylinderShape" id=17]
height = 12.0
radius = 16.0

[node name="air_strike" type="Spatial"]
script = ExtResource( 2 )
equip_animation = "equip_item"

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = ExtResource( 1 )
software_skinning_transform_normals = false
material/0 = SubResource( 15 )
material/1 = SubResource( 8 )
material/2 = SubResource( 14 )
material/3 = SubResource( 22 )
material/4 = SubResource( 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 18 )
anims/bip = SubResource( 19 )
anims/incoming = SubResource( 21 )

[node name="area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15.7194 )
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="area"]
shape = SubResource( 17 )

[node name="cooldown_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="aiming_timer" type="Timer" parent="."]
one_shot = true

[node name="delay_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
bus = "Sfx"

[node name="aiming_template" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.44318, 0 )
visible = false
cast_shadow = 0
billboard = 1
double_sided = false
no_depth_test = true
texture = ExtResource( 3 )

[connection signal="timeout" from="cooldown_timer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="aiming_timer" to="." method="_on_aiming_timer_timeout"]
